--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,8 @@
             "type": "shell",
             "command": "./build.sh",
             "windows": {
-                "command": "build.bat"
+                "command": "build.bat",
+                "args": ["debug"]
             },
             "problemMatcher": [
                 "$msCompile"
