add bunch of stuff (first triangle rendered!)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(Windows) Launch",
+            "name": "Launch Software Rasterizer Example (debug)",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build_debug/k15_win32_rasterizer.exe",
+            "program": "${workspaceFolder}/win32/build/debug/k15_win32_software_renderer_example.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": []
+        },
+        {
+            "name": "Launch Software Rasterizer Tests (debug)",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/win32/build/debug/k15_software_rasterizer_tests.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
