--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,10 @@
         "memory": "cpp",
         "unordered_map": "cpp",
         "xtr1common": "cpp",
-        "xiosbase": "cpp"
-    }
+        "xiosbase": "cpp",
+    },
+    "C_Cpp.default.defines": [ "K15_SOFTWARE_RASTERIZER_IMPLEMENTATION" ],
+    "C_Cpp.default.cppStandard": "c++17",
+    "C_Cpp.default.cStandard": "c11",
+    "C_Cpp.default.includePath": ["win32", ".."]
 }
