add stb_image to load textures added sample texture added vertex buffer & texture support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
+        "*.h": "cpp",
         "new": "cpp",
         "memory_resource": "cpp",
         "iomanip": "cpp",
@@ -23,6 +24,29 @@
         "unordered_map": "cpp",
         "xtr1common": "cpp",
         "xiosbase": "cpp",
+        "*.in": "cpp",
+        "*.inc": "cpp",
+        "*.t": "cpp",
+        "algorithm": "cpp",
+        "limits": "cpp",
+        "utility": "cpp",
+        "valarray": "cpp",
+        "array": "cpp",
+        "format": "cpp",
+        "forward_list": "cpp",
+        "__bit_reference": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp",
+        "ios": "cpp",
+        "set": "cpp",
+        "string": "cpp",
+        "unordered_set": "cpp",
+        "source_location": "cpp",
+        "__config": "cpp",
+        "__nullptr": "cpp"
     },
     "C_Cpp.default.defines": [ "K15_SOFTWARE_RASTERIZER_IMPLEMENTATION" ],
     "C_Cpp.default.cppStandard": "c++17",
