added test model fixed rasterization for very small triangles added obj and mtl loading

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,16 @@
             "environment": []
         },
         {
+            "name": "Launch Software Rasterizer Example (release)",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/win32/build/release/k15_win32_software_renderer_example.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": []
+        },
+        {
             "name": "Launch Software Rasterizer Tests (debug)",
             "type": "cppvsdbg",
             "request": "launch",
