implement barycentric coordinate calculation using SSE

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,10 @@
     "C_Cpp.default.defines": [ "K15_SOFTWARE_RASTERIZER_IMPLEMENTATION" ],
     "C_Cpp.default.cppStandard": "c++17",
     "C_Cpp.default.cStandard": "c11",
-    "C_Cpp.default.includePath": ["win32", ".."]
+    "C_Cpp.default.includePath": [
+        "win32",
+        "..",
+        "G:/programs/Superluminal/Performance/API/include"
+    ],
+    "C_Cpp.intelliSenseEngineFallback": "enabled"
 }
